# talk-to-your-urls

./: .env.example  .gitignore  Dockerfile  README.md  asgi.py  chat.ipynb  entrypoint.sh  pyproject.toml
app/: config.py  main.py  rag.py  router.py  schemas.py  utils.py
tests/: test_rag.py  test_utils.py
