[project]
name = "rag-app"
version = "0.1.0"
description = "Talk with your URLs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "chromadb>=0.6.3",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "langchain>=0.3.20",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.19",
    "langchain-google-genai>=2.1.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.0",
    "uvicorn>=0.34.0",
]
